Added logo thumbnail and logo

--- a/config/installation_config.yml
+++ b/config/installation_config.yml
@@ -3,9 +3,9 @@
 - name: INSTALLATION_NAME
   value: 'Ongair'
 - name: LOGO_THUMBNAIL
-  value: '/brand-assets/logo_thumbnail.svg'
+  value: '/brand-assets/logo_thumbnail.png'
 - name: LOGO
-  value: '/brand-assets/logo.svg'
+  value: '/brand-assets/logo.png'
 - name: BRAND_URL
   value: 'https://ongair.im'
 - name: WIDGET_BRAND_URL
