--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "Chatwoot",
-  "description": "Chatwoot is a customer support tool for instant messaging channels",
+  "name": "Ongair",
+  "description": "Ongair is a customer support tool for instant messaging channels",
   "website": "https://www.chatwoot.com/",
   "repository": "https://github.com/chatwoot/chatwoot",
-  "logo": "https://app.chatwoot.com/brand-assets/logo_thumbnail.svg",
+  "logo": "https://app.chatwoot.com/brand-assets/logo_png",
   "keywords": [
     "live chat",
     "customer support",
